[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/asset_scenes/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://things/WorkSans-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://things/Menu.gdshader" type="Shader" id=4]
[ext_resource path="res://textures_and_assets/Menu_animation/red.jpg" type="Texture" id=5]
[ext_resource path="res://textures_and_assets/Menu_animation/right.jpg" type="Texture" id=6]
[ext_resource path="res://textures_and_assets/Menu_animation/wrong.jpg" type="Texture" id=7]
[ext_resource path="res://textures_and_assets/Menu_animation/stock.jpg" type="Texture" id=8]
[ext_resource path="res://textures_and_assets/Menu_animation/left.jpg" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 39
font_data = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/overlay = true
shader_param/scanlines_opacity = 0.4
shader_param/scanlines_width = 0.25
shader_param/grille_opacity = 0.3
shader_param/resolution = Vector2( 640, 480 )
shader_param/pixelate = true
shader_param/roll = true
shader_param/roll_speed = 4.0
shader_param/roll_size = 15.0
shader_param/roll_variation = 1.8
shader_param/distort_intensity = 0.05
shader_param/noise_opacity = 0.4
shader_param/noise_speed = 5.0
shader_param/static_noise_intensity = 0.06
shader_param/aberration = 0.02
shader_param/brightness = 1.4
shader_param/discolor = true
shader_param/warp_amount = 0.0
shader_param/clip_warp = false
shader_param/vignette_intensity = 0.4
shader_param/vignette_opacity = 0.5

[node name="Control" type="Control"]
process_priority = -13
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.256, 0.266667 )
frames = SubResource( 5 )
frame = 7
speed_scale = 2.0
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 31.0
margin_right = 472.0
margin_bottom = 567.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 440.0
margin_bottom = 257.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Five
Nights
at
Retard's"

[node name="spacer" type="Label" parent="VBoxContainer"]
margin_top = 261.0
margin_right = 440.0
margin_bottom = 323.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )

[node name="newGame" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 327.0
margin_right = 282.0
margin_bottom = 394.0
focus_neighbour_top = NodePath("../quit")

[node name="continue" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 398.0
margin_right = 237.0
margin_bottom = 465.0
text = "Continue"

[node name="quit" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 116.0
focus_neighbour_bottom = NodePath("../newGame")
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 880.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 64.0

[node name="nightLabel" type="Label" parent="MarginContainer"]
margin_right = 128.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "Night 1"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 4 )
margin_right = 1024.0
margin_bottom = 600.0

[connection signal="pressed" from="VBoxContainer/newGame" to="." method="_on_newGame_pressed"]
[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
